<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>co.caio</groupId>
    <artifactId>tablier</artifactId>
    <version>0.1.4-SNAPSHOT</version>
    <url>https://caio.co</url>
    <packaging>jar</packaging>

    <name>tablier</name>
    <description />

    <scm>
        <connection>scm:git:file://.</connection>
        <developerConnection>scm:git:file://.</developerConnection>
        <url>scm:git:file://.</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <rocker.version>1.2.1</rocker.version>
        <immutables.version>2.7.5</immutables.version>
        <jackson.version>2.9.8</jackson.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.fizzed</groupId>
            <artifactId>rocker-runtime</artifactId>
            <version>${rocker.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fizzed</groupId>
            <artifactId>rocker-compiler</artifactId>
            <version>${rocker.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <version>${immutables.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <pushChanges>false</pushChanges>
                    <localCheckout>true</localCheckout>
                    <remoteTagging>false</remoteTagging>
                    <goals>install</goals>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.fizzed</groupId>
                <artifactId>rocker-maven-plugin</artifactId>
                <version>${rocker.version}</version>
                <executions>
                    <execution>
                        <id>generate-rocker-templates</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <javaVersion>${java.version}</javaVersion>
                            <optimize>true</optimize>
                            <skipTouch>true</skipTouch>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>generate-sample-html</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>co.caio.tablier.Generator</mainClass>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <classpathScope>compile</classpathScope>
                        </configuration>
                    </execution>
                    <execution>
                        <id>minify-css</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                            <configuration>
                                <executable>docker-compose</executable>
                                <arguments>
                                    <argument>run</argument>
                                    <argument>--rm</argument>
                                    <argument>css</argument>
                                    <argument>gulp</argument>
                                    <argument>build</argument>
                                </arguments>
                            </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-minified-css-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/tablier</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src</directory>
                                    <includes>
                                        <include>css/main.css.gz</include>
                                        <include>css/main.css</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <excludes>
                        <exclude>**/Generator.class</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>watch</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.fizzed</groupId>
                        <artifactId>rocker-maven-plugin</artifactId>
                        <version>${rocker.version}</version>
                        <executions>
                            <execution>
                                <id>generate-rocker-templates</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                                <configuration>
                                    <javaVersion>${java.version}</javaVersion>
                                    <optimize>false</optimize>
                                    <skipTouch>true</skipTouch>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <configuration>
                            <mainClass>co.caio.tablier.Generator</mainClass>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <classpathScope>compile</classpathScope>
                            <arguments>
                                <argument>watch</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
